# rwr_system

./: .gitignore  README.md  __init__.py  pyproject.toml
experiments/: CMakeLists.txt  README.md  __init__.py  grasp_gui.py  model_inference.py  model_inference_node.py  motor_control_gui.py  package.xml  run_teleop_rokoko.py
experiments/launch/: record_demonstration.launch.py  retargeting_rviz.launch.py  run_policy_inference.py  run_teleop_rokoko.launch.py
src/: __init__.py
src/common/: __init__.py  utils.py
src/hand_control/: CMakeLists.txt  __init__.py  cal.yaml  hand_control_node.py  hand_controller.py  hand_defs.yaml  joint_ekf.py  package.xml  simplified_finger_kinematics.py
src/hand_control/hand_control/: cal.yaml  dynamixel_client.py  finger_kinematics.py  hand_controller.py  hand_defs.yaml  joint_ekf.py  simplified_finger_kinematics.py
src/hand_control/hand_control_ros/: CMakeLists.txt  README.md  hand_control_node.py  package.xml
src/hand_control/hand_control_ros/launch/: hand_controller_launch.yaml
src/hand_control/utils/: mano_ros_visualize.py
src/ingress/: CMakeLists.txt  package.xml
src/ingress/oakd/: README.md  oakd_cams.yaml  oakd_ingress.py  oakd_node.py  oakd_utils.py
src/ingress/rokoko/: README.md  rokoko_ingress.py  rokoko_node.py
src/ingress/webcam/: mediapipe_node.py  webcam_mediapipe_ingress.py
src/logger/: bag2h5_converter.py  logger_node.py  package.xml  syncronize_data.py
src/logger/logger_ros/: CMakeLists.txt  bag2h5_converter.py
src/retargeter/: CMakeLists.txt  __init__.py  package.xml  retargeter.py  retargeter_node.py
src/retargeter/examples/: mujoco_visualizer.py  mujoco_visualizer_dummy_example.py
src/retargeter/hand_cfgs/: p1_cfg.py  p4_cfg.py
src/retargeter/launch/: rokoko_retarget_launch.yaml
src/retargeter/retargeter/: package.xml  setup.py
src/retargeter/retargeter/examples/: retarget_in_mujoco.py
src/retargeter/retargeter/retargeter/: retargeter.py
src/retargeter/retargeter/retargeter/hand_cfgs/: p4_cfg.py
src/retargeter/retargeter/retargeter/utils/: retarget_utils.py
src/retargeter/retargeter_ros/: CMakeLists.txt  README.md  package.xml  retargeter_node.py
src/retargeter/utils/: visulization.py
src/viz/: CMakeLists.txt  package.xml  visualize_joints.py  visualize_mano.py
src/viz/launch/: p4_and_panda_viz_launch.py  p4_viz_launch.py  panda_viz_launch.py
src/viz/models/faive_hand_p0/: faive_metadata.xml  faive_structure.xml  hand.xml
src/viz/models/faive_hand_p0/mesh/: README.md  base.stl  index_dp.stl  index_meta.stl  index_mp.stl  index_pp.stl  middle_dp.stl  middle_meta.stl  middle_mp.stl  middle_pp.stl  palm.stl  pinky_dp.stl  pinky_meta.stl  pinky_mp.stl  pinky_pp.stl  ring_dp.stl  ring_mp.stl  ring_pp.stl  thumb_base.stl  thumb_dp.stl  thumb_mp.stl
src/viz/models/faive_hand_p0/mesh_no_pads/: README.txt  index_dp.stl  index_mp.stl  index_pp.stl  middle_dp.stl  middle_mp.stl  middle_pp.stl  palm.stl  pinky_dp.stl  pinky_mp.stl  pinky_pp.stl  ring_dp.stl  ring_meta.stl  ring_mp.stl  ring_pp.stl  thumb_dp.stl  thumb_mp.stl  thumb_pp.stl
src/viz/models/faive_hand_p2/: faive_metadata_p2.xml  faive_structure_p2.xml  hand_p2.xml  hand_p2_6dofbase.xml
src/viz/models/faive_hand_p2/mesh_p2/: index_lm.stl  index_mp.stl  index_pp.stl  index_um.stl  middle_dp.stl  middle_lm.stl  middle_mp.stl  middle_um.stl  palm.stl  pinky_lm.stl  pinky_um.stl  thumb_dp.stl  thumb_lt.stl  thumb_m.stl  thumb_pp.stl  thumb_ut.stl
src/viz/models/faive_hand_p4/: faive_metadata_p4.xml  faive_structure_p4.xml  hand_p4.xml  scheme_p4.yaml
src/viz/models/faive_hand_p4/mesh_p4/: base.stl  index_dp.stl  middle_pp.stl  palm.stl  palm_tower.stl  pinky_dp.stl  pinky_mp.stl  pinky_pp.stl  thumb_pp.stl
src/viz/models/faive_hand_p4/urdf/: converted_index_dp.stl  converted_index_mp.stl  converted_index_pp.stl  converted_index_um.stl  converted_middle_dp.stl  converted_middle_mp.stl  converted_middle_pp.stl  converted_middle_um.stl  converted_palm_tower.stl  converted_pinky_dp.stl  converted_pinky_mp.stl  converted_pinky_pp.stl  converted_pinky_um.stl  converted_ring_dp.stl  converted_ring_mp.stl  converted_ring_pp.stl  converted_ring_um.stl  converted_thumb_base.stl  converted_thumb_dp.stl  converted_thumb_mp.stl  converted_thumb_pp.stl  p4.urdf
src/viz/models/franka_panda/: panda.urdf
src/viz/rviz/: retarget_config.rviz
