[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwr_system"
version = "0.1.0"
description = "A robotic hand control system"
authors = [
    {name = "Barnabas Gavin Cangan", email = "gavin.cangan@srl.ethz.ch"},
    {name = "Chenyu Yang", email = "chenyu.yang@srl.ethz.ch"},
    {name = "Davide Liconti", email = "davide.liconti@srl.ethz.ch"},
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "tqdm",
    "pyserial"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
hand = [
    "dynamixel-sdk>=3.7.0",
]
gui = [
    "tkinter",
]
retargeter = [
    "torch",
    "pytorch_kinematics",
    "mujoco", 
]
ros = [
    "rclpy",
]
inference = [
    "torch",
    "h5py",
    "torchvision",
]
all = [
    "dynamixel-sdk>=3.7.0",
    "tkinter",
    "torch",
    "pytorch_kinematics",
    "rclpy",
    "h5py",
    "torchvision", 
    "depthai", 
    "open3d",
    "opencv-python",
    "mujoco", 
    "cv_bridge", 
    "drake"
]

[tool.setuptools]
package-dir = {faive_system = "."}  # Tells setuptools that the package is in the current directory
packages = [
    "rwr_system",
    "rwr_system.src.hand_control",
    "rwr_system.src.logger",
    "rwr_system.src.ingress",
    "rwr_system.src.viz",
    "rwr_system.src.common",
]