<package format="3">
  <name>retargeter</name>
  <version>0.1.0</version>
  <description>Python package for MANO retargeting</description>

  <maintainer email="chenyu.yang@srl.ethz.ch">Chenyu Yang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend> 
  <depend>rclpy</depend> 
  <depend>geometry_msgs</depend> 

  <exec_depend>python3</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
